 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####    Quake Army Knife 6.4 Changelog


6.4.1 alpha 4
=============

 * [cbxpm]:  HL2
		 - Added HL2-Prefabs (custom addon)
     - Defaults.qrk: Added file association .vmf (Valve map format)
     - DataHL2.qrk / base.qrk: Added custom polys for use with specific brush entities

 * [alexander]: HL2
     - fixed problem with different material path lengths (decals folder)
     - try several entries of a material as image source: 
       %tooltexture then  $basetexture and if that doesnt help $envmap
     - fixed bug that quark cant load its own exported .vmf
     - quark trys to load a .vmf with the same name as fall
       back if loading a material fails
     - better exception forwarding from load material to display of image
     - reduced overall logging of dlls
     - introduced an environment "QUARK_LOG_LEVEL" variable to increase
       logging verbosity of quark. 

 * [cdunde]: Major updates and changes by dannsdinosaurs DannJ
      - to the Heretic_II DataHr2.qrk file.
 
 * [cbxpm]:  HL2 / Source engine content update
    -  Entity files are now alphabetically sorted
    -  Some entities fixed / improved

 * [alexander]: HL2
     - QuArK can display HL2 Materials now

 * [cbxpm]:  HL2 / Source engine content update
     - Prepared material files to work with shaders
     - UserData Half-Life2 updated (more quick selectable entities)     

 * [alexander]: HL2
     - HL2 split up entity files in base, and game specific files

 * [cdunde]: Updated the Genesis3D and Hexen_II data.qrk files
      - as well for corrections noted by Bengt Jardrup

 * [cdunde]: Major updates and changes by Bengt Jardrup
      - to the Quake_1 DataQ1.qrk file.

6.4.1 alpha 3
=============
